# pipes-trifecta

./: Makefile  README.md  pipes-parsers.cabal  pipes-trifecta.cabal
